﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.13) stable; urgency=low

  * osparser: for-to loop: fix failure at for x to x loop
  * oslog: includelogtail: now log includelog at log level 7

-- Detlef Oertel <d.oertel@uib.de>  Wed, 27 Dec 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.12) stable; urgency=low

  * fix sections in local functions: osparser: doAktionen:
  * New constant %opsidata%, %opsiapplog%

-- Detlef Oertel <d.oertel@uib.de>  Wed, 13 Dec 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.11) stable; urgency=low

  * Additional fix for Support brackets '[]' in Registry keys
    * osfunc: function posFromEnd(const substr : string; const s : string) : integer;
    * osparser: doRegistryHack: openkey, deletekey in Registry sections
    * osparser: evaluatestring: GetRegistryStringValue*

-- Detlef Oertel <d.oertel@uib.de>  Wed, 12 Dec 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.10) stable; urgency=low

  * osdefinedfunctions: TOsDefinedFunction.call: free local Vars on leaving the function; fixes #3230
  * Fix call of defined functions inside if statement ; fixes #3232
    * osdefinedfunctions: call: new param Nestlevel
    * osparser: evaluatestring: new param Nestlevel  (to use while call defined function)
    * osparser: producestringlist: new param Nestlevel  (to use while call defined function)
    * osparser: doSetVar: new param Nestlevel  (to use while call evaluatestring/producestringlist)
  * Support brackets '[]' in Registry keys ; fixes #2825
    * osparser: doRegistryHack: openkey, deletekey in Registry sections
    * osparser: evaluatestring: GetRegistryStringValue*
  * Encoding Parameter for sections which modify files (patches,Patchtext,...); references #3140
    * osencoding: LoadFromFileWithEncoding